Cambio en estilo

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ header{
     grid-row: 1 / 2;
     background-color: var(--background-color);
 
-    width: 100vw;
+    /* width: 100vw; */
 
     display: grid;
     grid-template-columns: repeat(12, 1fr);
