--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -55,11 +55,27 @@
     #products, #cart, #login_signup{
         grid-row: 21 / 22;
     }
+
+    h1{
+        font-size: 3.5rem;
+    }
+    
+    p{
+        font-size: 1.5rem;
+    }
 }
 
 @media screen and (max-width: 824px){
 
     /* Media query para pantallas de movil (a ver si lo arreglo)*/
+
+    h1{
+        font-size: 3rem;
+    }
+    
+    p{
+        font-size: 1.5rem;
+    }
 
     header .login_cart{
         grid-area: 1 / 7 / 2 / 11; 
@@ -87,14 +103,15 @@
         flex-direction: column;
         justify-content: center;
         position: fixed;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         background-color: var(--background-color);
-        top: 7em;
+        top: 3em;
         left: -200%;
         text-align: center;
         transition: all 0.5s;
-        gap: 2.5rem;
+        gap: 5rem;
+        font-size: 5rem;
     }
 
     nav .open ~ ul.menu{
@@ -158,5 +175,24 @@
       
     .open .line3 {
         transform: rotate(-47deg);
+    }
+
+    .products--container{
+        grid-template-columns: 1fr;
+
+        /* Cambiamos el contenedor de los productos para que se muestren de 1 en 1  */
+    }
+
+    .product img{
+        width: 50%;
+        height: 100%;
+    }
+
+    .cart--list li{
+        justify-content: center;
+    }
+
+    input{
+        padding: 1rem;
     }
 }
