--- a/styles.css
+++ b/styles.css
@@ -57,10 +57,21 @@ i:hover{
 }
 
 
+input, select{
+    font-size: 2rem;
+    font-weight: var(--text-font-weight);
+    color: var(--text-color);
+    padding: 1rem 2rem;
+    border: 1px solid var(--text-color);
+    border-radius: 0.5rem;
+    background-color: var(--background-color);
+}
+
+
 /* El container tiene el grid inicial donde se van a posicionar los elementos */
 .container{
     display: grid;
-    grid-template-columns: minmax(6rem, 1fr) repeat(8, minmax(min-content, 16rem) minmax(6rem, 1fr));
+    grid-template-columns: minmax(min-content, 1fr) repeat(8, minmax(min-content, 16rem) minmax(min-content, 1fr));
     grid-template-rows: repeat(4, min-content);
     grid-row-gap: 1.6rem;
     background-color: var(--background-color);
@@ -382,6 +393,7 @@ footer h2{
     padding-bottom: 2rem;
     padding-top: 2rem;
     font-family: var(--title-font);
+    text-align: center;
 }
 
 footer a{
@@ -739,16 +751,6 @@ form {
     gap: 2rem;
 }
 
-form input {
-    font-size: 2rem;
-    font-weight: var(--text-font-weight);
-    color: var(--text-color);
-    padding: 1rem 2rem;
-    border: 1px solid var(--text-color);
-    border-radius: 0.5rem;
-    background-color: var(--background-color);
-}
-
 form input:focus{
     outline: none;
     border: 1px solid var(--hover-color);
@@ -844,13 +846,7 @@ form button:hover{
 }
 
 .product--info input, .product--info select{
-    font-size: 2rem;
-    font-weight: var(--text-font-weight);
-    color: var(--text-color);
-    padding: 1rem 2rem;
     border: none;
-    border-radius: 0.5rem;
-    background-color: var(--background-color);
 }
 
 .product--info input:focus{
@@ -906,7 +902,7 @@ form button:hover{
 
 .cart--list li{
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     justify-content: flex-start;
     align-items: center;
     gap: 3rem;
