--- a/styles.css
+++ b/styles.css
@@ -271,6 +271,8 @@ colocando sus elementos mediante otro grid */
 
 #carrousel-img:hover{
     cursor: pointer;
+    scale: 1.05;
+    transition: var(--transition-time);
 }
 
 /* ---------------------------------------------------------------------------------------------- */
