--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,16 @@ i:hover{
     cursor: pointer;
 }
 
+h2{
+    font-size: 2rem;
+    font-weight: var(--title-weight);
+    text-transform: uppercase;
+    color: var(--hover-color);
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+    font-family: var(--title-font);
+    text-align: center;
+}
 
 input, select{
     font-size: 2rem;
@@ -387,16 +397,6 @@ footer{
     grid-template-rows: 1fr;
 }
 
-footer h2{
-    font-size: 2rem;
-    font-weight: var(--title-weight);
-    text-transform: uppercase;
-    color: var(--hover-color);
-    padding-bottom: 2rem;
-    padding-top: 2rem;
-    font-family: var(--title-font);
-    text-align: center;
-}
 
 footer a{
     font-size: 2rem;
@@ -762,11 +762,11 @@ form input:focus{
     border: 1px solid var(--hover-color);
 }
 
-input[type="email"]:valid, input[type="password"]:valid, input[type="tel"]:valid{
+input[type="email"]:valid, input[type="password"]:valid, input[type="tel"]:valid, input[pattern="^[0-9]{16}$"]:valid{
     border: 2px solid green;
 }
 
-input[type="email"]:invalid, input[type="password"]:invalid, input[type="tel"]:invalid{
+input[type="email"]:invalid, input[type="password"]:invalid, input[type="tel"]:invalid, input[pattern="^[0-9]{16}$"]:invalid{
     border: 2px solid var(--button-color);
 }
 
@@ -998,11 +998,7 @@ form button:hover{
 
 .cart--total h2{
     font-size: 2.5rem;
-    font-weight: var(--title-weight);
-    text-transform: uppercase;
-    color: var(--hover-color);
-    text-align: center;
-    font-family: var(--title-font);
+    padding: 0;
 }
 
 .cart--total #total--price, .cart--total #subtotal--price, .cart--total #shipping--price{
@@ -1063,4 +1059,47 @@ form button:hover{
     padding: 1rem 2rem;
     margin-top: 5rem;
     display: none;
+}
+
+#checkout--payment{
+    grid-column: 1 / -1;
+    grid-row: 15 / 30;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkout--form--container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+}
+
+.shipment, .payment{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.payment > div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.payment > div > select{
+    padding-right: 3.3rem;
+    padding-left: 3.3rem;
+}
+
+#checkout--payment h2{
+    color: var(--text-color);
 }
