--- a/styles.css
+++ b/styles.css
@@ -1063,7 +1063,7 @@ form button:hover{
 
 #checkout--payment{
     grid-column: 1 / -1;
-    grid-row: 15 / 30;
+    grid-row: 12 / 30;
 
     display: flex;
     flex-direction: column;
@@ -1074,8 +1074,8 @@ form button:hover{
 .checkout--form--container{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     gap: 5rem;
 }
 
@@ -1100,6 +1100,9 @@ form button:hover{
     padding-left: 3.3rem;
 }
 
-#checkout--payment h2{
-    color: var(--text-color);
+
+#checkout--payment h3{
+    text-align: center;
+    padding-bottom: 2rem;
+    font-size: 3rem;
 }
