--- a/styles.css
+++ b/styles.css
@@ -554,6 +554,48 @@ añadiendo 2% al width de las estrellas */
     gap: 1rem;
 }
 
+.lds-ring {
+    display: inline-block;
+    position: absolute;
+    top: calc(50% - 6.4rem);
+    left: calc(50% - 6.4rem);
+    width: 0.8rem;
+    height: 0.8rem;
+}
+
+.lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 6.4rem;
+    height: 6.4rem;
+    margin: 0.8rem;
+    border: 0.8rem solid var(--hover-color);
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: var(--hover-color) transparent transparent transparent;
+}
+
+.lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+}
+
+.lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
 
 
 
